# aoc-2024

./: .gitignore  README.md  pyproject.toml  scaffold.py  setup.py
01/: 01_test.py  part1.py  part2.py
02/: 02_test.py  part1.py  part2.py  part2_brute.py
03/: 03_test.py  part1.py  part2.py
04/: 04_test.py  part1.py  part2.py
05/: 05_test.py  part1.py  part2.py
06/: 06_test.py  part1.py  part2.py
07/: 07_test.py  part1.py  part2.py
08/: 08_test.py  part1.py  part2.py
09/: 09_test.py  part1.py  part2.py
10/: 10_test.py  part1.py  part2.py
11/: 11_test.py  part1.py  part2.py
12/: 12_test.py  part1.py  part2.py
13/: 13_test.py  part1.py  part2.py
14/: 14_test.py  part1.py  part2.py
15/: 15_test.py  part1.py  part2.py
16/: 16_test.py  part1.py  part2.py
17/: 17_test.py  part1.py  part2.py
18/: 18_test.py  part1.py  part2.py
common/: utils.py
lib/: setup.py
template/: part1.py  part2.py  {day}_test.py
