[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Niels Witte"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
pytest = "^8.3.3"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
